Updated directory structure of the project with logic and test. Try to resolve integration problem